feat: add verbose compilation output (#154)
* feat: add verbose compilation output

* add doc

* make linter happy
